# what-i-did

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.cache/yunanjeong/: Algorithm-OptimalBST.json  PChachu.json  PChachu_server.json  TripScanner-android.json  ansible-test.json  cmm.json  container-orchestration.json  db-helm.json  devenv-windows-java-intellij-git.json  ec2-k8s-deploy.json  efk-tester-by-terraform.json  eks-deploy.json  flink-test.json  fluentd-helm.json  forwarders.json  ftp-to-s3.json  ghub-mouse-doubleclick-reducer.json  gitlab-ce-install.json  how-to-manage-git.json  kafka-connect-manager.json  kafka-connect-s3-secnumbertimebasedpartitioner.json  kafka-connect-s3-without-topicname.json  kafka-jdbc-connector-control.json  kafka-tips.json  kstreams-deploy.json  langchain-toy.json  linux-tips.json  lora-sd.json  metric-llm-reporter.json  my-helm-charts.json  nexus-repos.json  packer.json  plg-stack.json  prom-proxy-test.json  python-package-template.json  python-tips.json  redis-test.json  s3-athena-lambda-partitioner.json  simple-kafka-deploy.json  simple-parquet-reader.json  (+6 more)
sample/: what-i-did-yunanjeong-20260506.docx  what-i-did-yunanjeong-20260506.md
src/what_i_did/: __main__.py  aggregate.py  analyze.py  cache.py  cli.py  collect.py  models.py
src/what_i_did/prompts/: __init__.py  en.py  ko.py
src/what_i_did/render/: docx.py  markdown.py
