[project]
name = "what-i-did"
version = "0.1.0"
description = "Generate a portfolio document from any public GitHub account by analyzing the real code."
requires-python = ">=3.11"
dependencies = [
    "anthropic[bedrock]>=0.40",
    "typer>=0.12",
    "rich>=13",
    "httpx>=0.27",
    "pydantic>=2.6",
    "python-docx>=1.1",
    "pathspec>=0.12",
]

[project.scripts]
what-i-did = "what_i_did.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/what_i_did"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]
